Updates data processor image and dependencies
Updates the data processor image to use Python 3.13.

Adds a step to install dependencies from requirements.txt during the container startup. This ensures that all required packages are installed before the data processing script is executed.

--- a/compose.yml
+++ b/compose.yml
@@ -1,12 +1,13 @@
 services:
   data_processor:
-    image: python:3.11-slim
+    image: python:3.13
     volumes:
       - ./prediction_log:/data
       - ./src:/src
     working_dir: /src
     command: >
       sh -c ". venv/bin/activate &&
+             pip install -r requirements.txt &&
              python3 process.py"
     environment:
       - API_TOKEN=${API_TOKEN}
