--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ certifi==2025.7.9
 charset-normalizer==3.4.2
 contourpy==1.3.2
 cycler==0.12.1
+flask==3.0.0
 fonttools==4.58.5
 idna==3.10
 joblib==1.5.1
